# bookworm

./: .gitignore  Cargo.toml  README.md  build.sh  play-host.sh  play-self.sh  play.sh  profile.sh  run.sh
src/: api.rs  benchmark.rs  brain.rs  game.rs  host.rs  main.rs  server.rs  util.rs
src/game/: board.rs  coord.rs  mod.rs  offset.rs  path.rs  snake.rs  turn.rs  util.rs
