[package]
name = "bookworm"
version = "0.1.0"
authors = ["csauve <csauve@t3hz0r.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
hyper = "0.13"
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
clap = "2.33.0"
# rayon = "1.1"
